; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/unbound/services/extr_authzone.c_http_parse_origin.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/unbound/services/extr_authzone.c_http_parse_origin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sldns_file_parse_state = type { i32, i32 }

@.str = private unnamed_addr constant [8 x i8] c"$ORIGIN\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.sldns_file_parse_state*)* @http_parse_origin to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @http_parse_origin(i32* %0, %struct.sldns_file_parse_state* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca %struct.sldns_file_parse_state*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store %struct.sldns_file_parse_state* %1, %struct.sldns_file_parse_state** %5, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = call i64 @sldns_buffer_begin(i32* %8)
  %10 = inttoptr i64 %9 to i8*
  store i8* %10, i8** %6, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = call i64 @strncmp(i8* %11, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 7)
  %13 = icmp eq i64 %12, 0
  br i1 %13, label %14, label %38

14:                                               ; preds = %2
  %15 = load i8*, i8** %6, align 8
  %16 = getelementptr inbounds i8, i8* %15, i64 7
  %17 = load i8, i8* %16, align 1
  %18 = call i64 @isspace(i8 zeroext %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %38

20:                                               ; preds = %14
  %21 = load %struct.sldns_file_parse_state*, %struct.sldns_file_parse_state** %5, align 8
  %22 = getelementptr inbounds %struct.sldns_file_parse_state, %struct.sldns_file_parse_state* %21, i32 0, i32 0
  store i32 4, i32* %22, align 4
  %23 = load i8*, i8** %6, align 8
  %24 = getelementptr inbounds i8, i8* %23, i64 8
  %25 = call i32 @sldns_strip_ws(i8* %24)
  %26 = load %struct.sldns_file_parse_state*, %struct.sldns_file_parse_state** %5, align 8
  %27 = getelementptr inbounds %struct.sldns_file_parse_state, %struct.sldns_file_parse_state* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 4
  %29 = load %struct.sldns_file_parse_state*, %struct.sldns_file_parse_state** %5, align 8
  %30 = getelementptr inbounds %struct.sldns_file_parse_state, %struct.sldns_file_parse_state* %29, i32 0, i32 0
  %31 = call i32 @sldns_str2wire_dname_buf(i32 %25, i32 %28, i32* %30)
  store i32 %31, i32* %7, align 4
  %32 = load i32, i32* %7, align 4
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %37

34:                                               ; preds = %20
  %35 = load %struct.sldns_file_parse_state*, %struct.sldns_file_parse_state** %5, align 8
  %36 = getelementptr inbounds %struct.sldns_file_parse_state, %struct.sldns_file_parse_state* %35, i32 0, i32 0
  store i32 0, i32* %36, align 4
  br label %37

37:                                               ; preds = %34, %20
  store i32 1, i32* %3, align 4
  br label %39

38:                                               ; preds = %14, %2
  store i32 0, i32* %3, align 4
  br label %39

39:                                               ; preds = %38, %37
  %40 = load i32, i32* %3, align 4
  ret i32 %40
}

declare dso_local i64 @sldns_buffer_begin(i32*) #1

declare dso_local i64 @strncmp(i8*, i8*, i32) #1

declare dso_local i64 @isspace(i8 zeroext) #1

declare dso_local i32 @sldns_str2wire_dname_buf(i32, i32, i32*) #1

declare dso_local i32 @sldns_strip_ws(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
